# parler-tts

./: .gitignore  README.md  deploy.yaml  pyproject.toml
configs/: settings.yaml
docker/: Dockerfile  docker-compose.yml  start_ui.sh
src/: app.py  tts.py
tests/: test_tts.py
